Bug 1808490 - Add SEH guards to try and avoid crashing during text-decoration skipping. r=lsalzman

Better to just draw an unbroken underline than to crash the tab, in the event a Windows exception
occurs from deep inside skia/directwrite.

Differential Revision: https://phabricator.services.mozilla.com/D165933